# Mobile-Manipulator-Robot-Design-and-Simulation-Project

./: README.md  verification_forward_kinematics.m
package/bot/: CMakeLists.txt  package.xml
package/bot/config/: control.yaml
package/bot/launch/: debug.launch.py  spawn_robot_ros2.launch.py
package/bot/meshes/: base.STL  base_link.STL  base_upper.STL  front_left_wheel.STL  front_right_wheel.STL  rear_left_wheel.STL  rear_right_wheel.STL  stem1_lower.STL  stem2_lower.STL  vaccum.STL  vaccum_base.STL  vaccum_lower.STL
package/bot/rviz/: display.rviz
package/bot/src/: bot_controller.py
package/bot/urdf/: bot.csv  bot.urdf.xacro
package/bot/worlds/: main_world.world
